--- a/app/components/Transformasi/Timeline.module.css
+++ b/app/components/Transformasi/Timeline.module.css
@@ -16,7 +16,7 @@
 
 .styledButton {
   display: inline-block; /* Makes the button wrap tightly around its content */
-  padding: 180px 180px; /* Adjust padding for top-bottom and left-right */
+  padding: 130px 130px; /* Adjust padding for top-bottom and left-right */
   font-size: 10em; /* Matches the font size of the title */
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; /* Ganti font */
   background-color: #007bff; /* Button background color */
@@ -24,7 +24,7 @@
   border: none; /* No border */
   border-radius: 500px; /* Match rounded corners with title */
   cursor: pointer; /* Pointer cursor on hover */
-  margin: 290px 0 100px 570; /* Add top margin (40px) for spacing */
+  margin: 220px 0 110px 425; /* Add top margin (40px) for spacing */
   /* padding-right: 100px; */
   text-align: center; /* Center align text */
   transition: background-color 0.8s ease; /* Smooth background transition */
@@ -48,10 +48,10 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 20%; /* Jarak antar kartu */
+  gap: 50%; /* Jarak antar kartu */
   flex-wrap: wrap;
   position: absolute;
-  top: 40%;
+  top: 42%;
   left: 44%;
   width: 100%;
   height: 100%;
@@ -61,8 +61,8 @@
   position: absolute; /* Membuat kartu berada dalam posisi absolut */
   background-color: white; /* Warna latar belakang */
   border-radius: 50%; /* Membuat kartu bulat */
-  width: 150px; /* Atur lebar kartu */
-  height: 150px; /* Atur tinggi kartu */
+  width: 120px; /* Atur lebar kartu */
+  height: 120px; /* Atur tinggi kartu */
   transform: translate(-40%, -40%); /* Memusatkan kartu */
   display: flex;
   flex-direction: column;
@@ -141,7 +141,7 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%) scale(0.7);
-  width: 70%;
+  width: 100%;
   max-width: 700px;
   background: white;
   border-radius: 10px;
@@ -176,7 +176,7 @@
 /* General container styling for the phone mockup */
 .mockup-phone {
   position: relative;
-  width: 100%;
+  width: 90%;
   padding-top: 150%; /* Adjust based on your mockup phone dimensions */
   background-color: #f1f1f1;
   border-radius: 25px;
@@ -187,9 +187,10 @@
 .camera {
   width: 40px;
   height: 10px;
+  left: 50px;
   background-color: #333;
   border-radius: 10px;
-  margin: 10px auto 5px auto;
+  margin: 20px auto 5px auto;
 }
 
 /* Display area where content is shown */
@@ -197,7 +198,7 @@
   flex: 1;
   background-color: white;
   border-radius: 0 0 20px 20px;
-  padding: 15px;
+  padding: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -205,8 +206,8 @@
 
 /* Artboard for the main content inside the display */
 .artboard {
-  width: 90%;
-  height: 90%;
+  width: 50%;
+  height: 50%;
   background-color: #fff;
   border-radius: 15px;
   box-shadow: inset 0 2px 8px rgba(0, 0, 0, 0.2);
@@ -223,7 +224,7 @@
 }
 
 .popupContent {
-  width: 500px;
+  width: 400px;
   height: 65%; 
   background-color: white;
   padding: 10px;
@@ -236,7 +237,7 @@
 
 .mediaContainer {
   padding-top: 10px;
-  width: 70%;
+  width: 50%;
   display: flex;
   justify-content: center;
   margin-bottom: 2px; /* Adds spacing between media and text */
@@ -250,21 +251,21 @@
 }
 
 .popupImage {
-  width: 550px; /* Fixed width for the image */
-  height: 400px; /* Fixed height for the image */
+  width: 350px; /* Fixed width for the image */
+  height: 300px; /* Fixed height for the image */
   /* object-fit: contain; Maintain aspect ratio */
-  border-radius: 70px;
+  border-radius: 5%;
   /* border-radius: 10px; */
   padding-bottom: 10px;
-  padding-left: 30px;
+  padding-left: 10px;
   padding-top: 60px;
 }
 
 .popupVideo{
-  width: 550px; /* Fixed width for the image */
-  height: 400px; /* Fixed height for the image */
+  width: 350px; /* Fixed width for the image */
+  height: 300px; /* Fixed height for the image */
   /* object-fit: contain; Maintain aspect ratio */
-  border-radius: 30px;
+  border-radius: 50%;
   /* padding-bottom: 2px; */
   padding-right: 10px;
   padding-left: 18px;
@@ -294,7 +295,7 @@
 .carouselControls {
   position: absolute;
   display: flex;
-  gap: 550px;
+  gap: 350px;
   z-index: 1;
   padding-top: 200px;
   padding-left: 10px;
@@ -316,7 +317,7 @@
   background-color: rgba(0, 0, 0, 0.6);
   color: white;
   border: none;
-  padding: 8px 12px;
+  padding: 12px 12px;
   border-radius: 50%;
   cursor: pointer;
   font-size: 18px;
@@ -328,8 +329,8 @@
 
 .closeButton {
   position: absolute;
-  top: 20px;
-  right: 50px;
+  top: 25px;
+  right: 35px;
   display: flex;
   align-items: center;
   justify-content: center;
