--- a/app/components/Pencapaian/Timeline.module.css
+++ b/app/components/Pencapaian/Timeline.module.css
@@ -282,7 +282,7 @@
 .popupDescription {
   padding-top: 0px;
   padding-left: 30px;
-  padding-bottom: 50px;
+  /* padding-bottom: 50px; */
   max-height: 400px; /* Set max height to trigger scrolling */
   overflow-y: auto; /* Enable vertical scrolling */
   overflow-x: hidden; /* Disable horizontal scrolling */
