--- a/app/components/Pencapaian/Timeline.module.css
+++ b/app/components/Pencapaian/Timeline.module.css
@@ -16,7 +16,7 @@
 
 .styledButton {
   display: inline-block; /* Makes the button wrap tightly around its content */
-  padding: 140px 140px; /* Adjust padding for top-bottom and left-right */
+  padding: 120px 120px; /* Adjust padding for top-bottom and left-right */
   font-size: 10em; /* Matches the font size of the title */
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; /* Ganti font */
   background-color: #007bff; /* Button background color */
@@ -24,7 +24,7 @@
   border: none; /* No border */
   border-radius: 500px; /* Match rounded corners with title */
   cursor: pointer; /* Pointer cursor on hover */
-  margin: 220px 0 110px 430; /* Add top margin (40px) for spacing */
+  margin: 210px 0 20px 290; /* Add top margin (40px) for spacing */
   /* padding-right: 100px; */
   text-align: center; /* Center align text */
   transition: background-color 0.8s ease; /* Smooth background transition */
@@ -51,7 +51,7 @@
   gap: 20%; /* Jarak antar kartu */
   flex-wrap: wrap;
   position: absolute;
-  top: 42%;
+  top: 50%;
   left: 44%;
   width: 100%;
   height: 100%;
@@ -59,10 +59,10 @@
 
 .card {
   position: absolute; /* Membuat kartu berada dalam posisi absolut */
-  background-color: white; /* Warna latar belakang */
+  background: linear-gradient(180deg, #FFFFFF 0%, #D2DC00 100%);
   border-radius: 50%; /* Membuat kartu bulat */
-  width: 150px; /* Atur lebar kartu */
-  height: 150px; /* Atur tinggi kartu */
+  width: 130px; /* Atur lebar kartu */
+  height: 130px; /* Atur tinggi kartu */
   transform: translate(-40%, -40%); /* Memusatkan kartu */
   display: flex;
   flex-direction: column;
@@ -102,7 +102,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #4CAF50;
+  background: linear-gradient(180deg, #FFFFFF 0%, #09BAA5 100%);
   color: white;
   font-size: 1.2em;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
