--- a/app/components/Transformasi/Timeline.module.css
+++ b/app/components/Transformasi/Timeline.module.css
@@ -81,6 +81,11 @@
 .cardTitle {
   margin: 5px 0; /* Jarak antara elemen judul */
   font-size: 1em; /* Ukuran font judul */
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .cardSubtitle {
