--- a/app/components/Pencapaian/Timeline.module.css
+++ b/app/components/Pencapaian/Timeline.module.css
@@ -16,7 +16,7 @@
 
 .styledButton {
   display: inline-block; /* Makes the button wrap tightly around its content */
-  padding: 120px 120px; /* Adjust padding for top-bottom and left-right */
+  padding: 130px 130px; /* Adjust padding for top-bottom and left-right */
   font-size: 10em; /* Matches the font size of the title */
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; /* Ganti font */
   background-color: #007bff; /* Button background color */
@@ -24,7 +24,7 @@
   border: none; /* No border */
   border-radius: 500px; /* Match rounded corners with title */
   cursor: pointer; /* Pointer cursor on hover */
-  margin: 210px 0 20px 290; /* Add top margin (40px) for spacing */
+  margin: 240px 0 10px 385; /* Add top margin (40px) for spacing */
   /* padding-right: 100px; */
   text-align: center; /* Center align text */
   transition: background-color 0.8s ease; /* Smooth background transition */
@@ -59,10 +59,10 @@
 
 .card {
   position: absolute; /* Membuat kartu berada dalam posisi absolut */
-  background: linear-gradient(180deg, #FFFFFF 0%, #D2DC00 100%);
+  background-color: white; /* Warna latar belakang */
   border-radius: 50%; /* Membuat kartu bulat */
-  width: 130px; /* Atur lebar kartu */
-  height: 130px; /* Atur tinggi kartu */
+  width: 120px; /* Atur lebar kartu */
+  height: 120px; /* Atur tinggi kartu */
   transform: translate(-40%, -40%); /* Memusatkan kartu */
   display: flex;
   flex-direction: column;
@@ -72,6 +72,7 @@
   transition: transform 0.3s; /* Efek transisi saat kartu dipilih */
   cursor: pointer; /* Menunjukkan bahwa kartu dapat diklik */
 }
+
 
 .card:hover {
   transform: scale(1.05); /* Membesar saat hover */
@@ -96,12 +97,13 @@
 .iconContainer {
   margin-bottom: 5px; /* Jarak antara ikon dan teks */
 }
+
 .circularCard {
   position: relative; /* Atur posisi absolut untuk berada di tengah .card */
-  top: 45%; /* Posisikan di tengah secara vertikal */
-  left: 23%; /* Posisikan di tengah secara horizontal */
+  top: 36%; /* Posisikan di tengah secara vertikal */
+  left: 15%; /* Posisikan di tengah secara horizontal */
   transform: translate(-50%, -50%); /* Pusatkan */
-  width: 150px; /* Atur lebar sesuai kebutuhan */
+  width: 100px; /* Atur lebar sesuai kebutuhan */
   height: 100px; /* Atur tinggi sesuai kebutuhan */
   border-radius: 50%; /* Membuatnya bulat */
   display: flex;
@@ -281,14 +283,14 @@
   /* padding-bottom: 2px; */
   padding-right: 10px;
   padding-left: 18px;
-  padding-top: 50px;
+  padding-top: 10px;
 }
 
 .popupDescription {
   padding-top: 0px;
   padding-left: 30px;
   /* padding-bottom: 50px; */
-  max-height: 400px; /* Set max height to trigger scrolling */
+  max-height: 300px; /* Set max height to trigger scrolling */
   overflow-y: auto; /* Enable vertical scrolling */
   overflow-x: hidden; /* Disable horizontal scrolling */
   padding-right: 20px; /* Space for scrollbar */
