--- a/app/components/Transformasi/Timeline.module.css
+++ b/app/components/Transformasi/Timeline.module.css
@@ -24,7 +24,7 @@
   border: none; /* No border */
   border-radius: 500px; /* Match rounded corners with title */
   cursor: pointer; /* Pointer cursor on hover */
-  margin: 220px 0 110px 425; /* Add top margin (40px) for spacing */
+  margin: 240px 0 10px 385; /* Add top margin (40px) for spacing */
   /* padding-right: 100px; */
   text-align: center; /* Center align text */
   transition: background-color 0.8s ease; /* Smooth background transition */
@@ -51,7 +51,7 @@
   gap: 50%; /* Jarak antar kartu */
   flex-wrap: wrap;
   position: absolute;
-  top: 42%;
+  top: 50%;
   left: 44%;
   width: 100%;
   height: 100%;
@@ -61,8 +61,8 @@
   position: absolute; /* Membuat kartu berada dalam posisi absolut */
   background-color: white; /* Warna latar belakang */
   border-radius: 50%; /* Membuat kartu bulat */
-  width: 150px; /* Atur lebar kartu */
-  height: 150px; /* Atur tinggi kartu */
+  width: 120px; /* Atur lebar kartu */
+  height: 120px; /* Atur tinggi kartu */
   transform: translate(-40%, -40%); /* Memusatkan kartu */
   display: flex;
   flex-direction: column;
@@ -98,8 +98,8 @@
 }
 .circularCard {
   position: relative; /* Atur posisi absolut untuk berada di tengah .card */
-  top: 42%; /* Posisikan di tengah secara vertikal */
-  left: 23%; /* Posisikan di tengah secara horizontal */
+  top: 36%; /* Posisikan di tengah secara vertikal */
+  left: 15%; /* Posisikan di tengah secara horizontal */
   transform: translate(-50%, -50%); /* Pusatkan */
   width: 100px; /* Atur lebar sesuai kebutuhan */
   height: 100px; /* Atur tinggi sesuai kebutuhan */
@@ -107,7 +107,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #4CAF50;
+  background: linear-gradient(180deg, #FFFFFF 0%, #09BAA5 100%);
   color: white;
   font-size: 1.2em;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
