--- a/app/components/Transformasi/Timeline.module.css
+++ b/app/components/Transformasi/Timeline.module.css
@@ -1,33 +1,27 @@
 .timelineContainer {
-  padding-bottom: 20%;
+  /* padding-bottom: 20%; */
   text-align: center;
-  /* Tambahkan gambar latar belakang */
-  /* background-image: url('/bg.png'); Ganti dengan URL gambar yang sesuai */
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  width: 90vw; /* Lebar penuh layar */
-  height: 100vh; /* Tinggi penuh layar */
-  position: fixed; /* Tetapkan posisi agar tetap di layar */
-  top: 1;
-  /* left: 12; */
-  /* z-index: -1; Pastikan background berada di belakang konten */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  position: relative;
 }
 
 .styledButton {
-  display: inline-block; /* Makes the button wrap tightly around its content */
-  padding: 130px 130px; /* Adjust padding for top-bottom and left-right */
-  font-size: 10em; /* Matches the font size of the title */
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; /* Ganti font */
-  background-color: #007bff; /* Button background color */
-  color: #ffffff; /* Text color */
-  border: none; /* No border */
-  border-radius: 500px; /* Match rounded corners with title */
-  cursor: pointer; /* Pointer cursor on hover */
-  margin: 240px 0 10px 385; /* Add top margin (40px) for spacing */
+  /* display: inline-block; */
+  padding: 130px 130px; 
+  /* font-size: 10em; */
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif; 
+  background-color: #007bff;
+  color: #ffffff;
+  border: none; 
+  border-radius: 500px; 
+  cursor: pointer;
+  /* margin: 240px 0 10px 385;  */
   /* padding-right: 100px; */
-  text-align: center; /* Center align text */
-  transition: background-color 0.8s ease; /* Smooth background transition */
+  text-align: center; 
+  transition: background-color 0.8s ease;
 }
 
 .styledButton:hover {
@@ -48,11 +42,12 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 50%; /* Jarak antar kartu */
+  gap: 20%; /* Jarak antar kartu */
   flex-wrap: wrap;
   position: absolute;
   top: 50%;
-  left: 44%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   width: 100%;
   height: 100%;
 }
@@ -63,7 +58,7 @@
   border-radius: 50%; /* Membuat kartu bulat */
   width: 120px; /* Atur lebar kartu */
   height: 120px; /* Atur tinggi kartu */
-  transform: translate(-40%, -40%); /* Memusatkan kartu */
+  /* transform: translate(-40%, -40%); */
   display: flex;
   flex-direction: column;
   justify-content: center; /* Memusatkan konten vertikal */
@@ -97,13 +92,13 @@
   margin-bottom: 5px; /* Jarak antara ikon dan teks */
 }
 .circularCard {
-  position: relative; /* Atur posisi absolut untuk berada di tengah .card */
-  top: 36%; /* Posisikan di tengah secara vertikal */
-  left: 15%; /* Posisikan di tengah secara horizontal */
-  transform: translate(-50%, -50%); /* Pusatkan */
-  width: 100px; /* Atur lebar sesuai kebutuhan */
-  height: 100px; /* Atur tinggi sesuai kebutuhan */
-  border-radius: 50%; /* Membuatnya bulat */
+  /* position: relative; 
+  top: 36%;
+  left: 15%;
+  transform: translate(-50%, -50%);  */
+  width: 100px;
+  height: 100px; 
+  border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
