--- a/app/components/Pencapaian/Timeline.module.css
+++ b/app/components/Pencapaian/Timeline.module.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  position: relative;
+  position: absolute;
   /* Tambahkan gambar latar belakang */
   /* background-image: url('/bg.png'); Ganti dengan URL gambar yang sesuai */
   /* background-size: cover; */
