--- a/app/components/Transformasi/Timeline.module.css
+++ b/app/components/Transformasi/Timeline.module.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  position: relative;
+  position: absolute;
 }
 
 .styledButton {
